# aominis

./: .gitignore  DEPLOYMENT_GUIDE.md  Makefile  README.md  context.md  contract_address.txt  foundry.toml  requirements.txt
contracts/: CalcSolverCore.sol
contracts/interfaces/: ICalcSolver.sol
contracts/modules/: BotRegistry.sol  Escrow.sol  OrderBook.sol  RatingSystem.sol  SolutionManager.sol  SubscriptionManager.sol  Verifier.sol
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/api/: problems.js
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: BotMarketplace.jsx  BotProfile.jsx  CreditsBar.jsx  Header.jsx  LatexRenderer.jsx  MarkdownRenderer.jsx  MyOrders.jsx  ProblemForm.jsx  ProblemList.jsx  SolutionSteps.jsx  SolverDashboard.jsx  SubscriptionPage.jsx
indexer/: Dockerfile  docker-compose.yml  event_listener.py  main.py  models.py  requirements.txt
indexer/api/: orders.py  solutions.py  stats.py
script/: Deploy.s.sol
sdk/: README.md  bot_server.py  check_sepolia.py  env-template.txt  ominis_sdk.py  oracle_service.py  pyproject.toml  requirements.txt  test_connection.py  test_solver.py
sdk/examples/: solver_bot.py
simulation/: calc_solver_simulation.py
test/: CalcSolverCore.t.sol  Integration.t.sol
test/mocks/: MockERC20.sol
tests/python/: test_connection.py  test_parse_gpt.py  test_solver.py
verifier/: requirements.txt
verifier/api/: main.py
verifier/api/routes/: challenge.py  verify.py
verifier/api/services/: gpt_solver.py  (+1 more)
verifier/oracle/: oracle_node.py
